# computer-use-linux

./: .agnix.toml  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh  package.json
.cargo/: audit.toml
.github/workflows/: ci.yml  sync-reminder.yml
docs/: architecture.md  fileindex.md
docs/agent_docs/: agents_md_status.json  commit_dossier.json  commit_dossier.md  doc_status.json  running_tests.md
examples/: atspi_probe.rs
gnome-shell-extension/computer-use-linux@avifenesh.dev/: extension.js  metadata.json
npm/: README.md  install.js
scripts/: mcp_safety_check.py
scripts/zod-check/: check.mjs  package-lock.json  package.json
skills/computer-use-linux/: SKILL.md
src/: abs_pointer.rs  cli.rs  cosmic_helper.rs  diagnostics.rs  gnome_extension.rs  identity.rs  lib.rs  main.rs  screenshot.rs  server.rs  windows.rs
src/windowing/: mod.rs  registry.rs
src/windowing/backends/: gnome.rs  hyprland.rs  kwin.rs
tests/: library_exports.rs
