[package]
name = "computer-use-linux"
version = "0.2.3"
edition = "2021"
authors = ["Avi Fenesh <avifenesh@users.noreply.github.com>"]
license = "MIT"
description = "Linux desktop control over MCP — AT-SPI accessibility tree, multi-compositor window targeting (GNOME, KWin, Hyprland, i3, COSMIC), screencast portal screenshots, and ydotool input synthesis. Wayland-first, X11 best-effort."
homepage = "https://github.com/agent-sh/computer-use-linux"
repository = "https://github.com/agent-sh/computer-use-linux"
documentation = "https://github.com/agent-sh/computer-use-linux#readme"
readme = "README.md"
keywords = ["mcp", "computer-use", "accessibility", "gnome", "wayland"]
categories = ["accessibility", "command-line-utilities", "os::linux-apis"]

[[bin]]
name = "computer-use-linux"
path = "src/main.rs"

[[bin]]
name = "computer-use-linux-cosmic"
path = "src/bin/codex-computer-use-cosmic.rs"

[dependencies]
anyhow = "1.0.102"
atspi = { version = "0.29.0", features = ["tokio"] }
base64 = "0.22.1"
evdev = "0.13.2"
cosmic-protocols = { version = "0.2.0", default-features = false, features = ["client"] }
futures-util = "0.3.32"
image = { version = "0.25", default-features = false, features = ["png"] }
rmcp = { version = "1.5.0", features = ["transport-io"] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "rt", "time"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
xkeysym = "0.2.1"
zbus = "5.14.0"

[profile.release]
lto = "thin"
strip = "symbols"
